// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a Indent icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className={undefined}
    height="18px"
    onChange={undefined}
    viewBox="0 0 18 18"
    width="18px"
  >
    <line
      className="ql-stroke"
      x1="3"
      x2="15"
      y1="14"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="3"
      x2="15"
      y1="4"
      y2="4"
    />
    <line
      className="ql-stroke"
      x1="9"
      x2="15"
      y1="9"
      y2="9"
    />
    <polyline
      className="ql-fill ql-stroke"
      points="3 7 3 11 5 9 3 7"
    />
  </svg>
</span>
`;

exports[`create a Outdent icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className={undefined}
    height="18px"
    onChange={undefined}
    viewBox="0 0 18 18"
    width="18px"
  >
    <line
      className="ql-stroke"
      x1="3"
      x2="15"
      y1="14"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="3"
      x2="15"
      y1="4"
      y2="4"
    />
    <line
      className="ql-stroke"
      x1="9"
      x2="15"
      y1="9"
      y2="9"
    />
    <polyline
      className="ql-stroke"
      points="5 7 5 11 3 9 5 7"
    />
  </svg>
</span>
`;
